--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -1,22 +1,3 @@
 @import "abstracts/__abstracts-dir";
 @import "components/__components-dir";
 @import "layout/__layout-dir";
-
-section{
-    padding: 50px;
-}
-h1 {
-    @extend .title-font-style;
-    font-size: $font-size-xlarge;
-    width: 50%;
-}
-.intro{
-    padding: 20px;
-    max-width: 800px;
-    margin: 20px auto 20px auto;
-    text-align: center;
-}
-.about-img{
-    margin-left: 129px;
-    border-radius: 30px;
-}
